category and display products and add to cart

--- a/shop.html
+++ b/shop.html
@@ -209,7 +209,7 @@
 <div class="subtotal-price">£300.00</div>
 </li>
 <li>
-<a class="cart-button" href="checkout.html">view cart</a>
+<a class="cart-button" href="cart.html">view cart</a>
 <a class="checkout" href="checkout.html">checkout</a>
 </li>
 </ul>
@@ -225,8 +225,8 @@
 <div class="position-center-center">
 <div class="search">
 <form>
-<input type="search" placeholder="Search Shop">
-<button type="submit"><i class="fa fa-search"></i></button>
+<input type="search" id="searchItem" placeholder="Search Shop">
+<button onclick="search()" type="submit"><i class="fa fa-search"></i></button>
 </form>
 </div>
 </div>
@@ -352,15 +352,25 @@
 
 <aside class="widget widget-categories">
 <h3 class="sidebar-title">Categories</h3>
-<ul class="sidebar-menu">
-<li><a href="#">Clothes</a> <span class="count">(14)</span></li>
+<ul class="sidebar-menu" id="category">
+<!-- <li><a href="#">Clothes</a> <span class="count">(14)</span></li>
 <li><a href="#">Men</a> <span class="count">(9)</span></li>
 <li><a href="#">Shoes</a> <span class="count">(2)</span></li>
 <li><a href="#">Sunglasses</a> <span class="count">(2)</span></li>
-<li><a href="#">Women</a> <span class="count">(8)</span></li>
+<li><a href="#">Women</a> <span class="count">(8)</span></li> -->
 </ul>
 </aside>
 
+<aside class="widget filter-by" id="subCategoryText">
+    <!-- <h3 class="sidebar-title">Sub-Category</h3>
+    <ul class="sidebar-menu" id="subcategory"> -->
+    <!-- <li><a href="#">L</a> <span class="count">(1)</span></li>
+    <li><a href="#">M</a> <span class="count">(1)</span></li>
+    <li><a href="#">S</a> <span class="count">(1)</span></li>
+    <li><a href="#">XL</a> <span class="count">(1)</span></li>
+    <li><a href="#">XXL</a> <span class="count">(1)</span></li> -->
+    <!-- </ul> -->
+    </aside>
 
 <aside class="widget shop-filter">
 <h3 class="sidebar-title">Filter selection</h3>
@@ -373,18 +383,6 @@
 </div>
 </div>
 </div>
-</aside>
-
-
-<aside class="widget filter-by">
-<h3 class="sidebar-title">Product price</h3>
-<ul class="sidebar-menu">
-<li><a href="#">L</a> <span class="count">(1)</span></li>
-<li><a href="#">M</a> <span class="count">(1)</span></li>
-<li><a href="#">S</a> <span class="count">(1)</span></li>
-<li><a href="#">XL</a> <span class="count">(1)</span></li>
-<li><a href="#">XXL</a> <span class="count">(1)</span></li>
-</ul>
 </aside>
 
 
@@ -485,13 +483,10 @@
 </ul>
 <div class="short-by">
 <span class="sorting-show"> Sort by:</span>
-<select>
-<option value="volvo">popularity</option>
-<option value="saab">Default</option>
-<option value="mercedes">average rating</option>
-<option value="audi">newness</option>
-<option value="audi">low to high</option>
-<option value="audi">high to low</option>
+<select id="sortByPrice" onchange="sort()">
+<option value="new">newness</option>
+<option value="asc">low to high</option>
+<option value="desc">high to low</option>
 </select>
 </div>
 <div class="shop-show">
@@ -507,9 +502,9 @@
 </div>
 <div class="shop-breadcrumb">
 <ul>
-<li class="active"><a href="#">1</a></li>
-<li><a href="#">2</a></li>
-<li><a href="#">3</a></li>
+<li class="active"><a href="#" onclick="showProducts()">1</a></li>
+<li><a href="#" onclick="showProductsForPageTwo()">2</a></li>
+<li><a href="#" onclick="showProductsForPageThree()">3</a></li>
 <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
 </ul>
 </div>
@@ -517,9 +512,9 @@
 
 <div class="tab-content">
 <div role="tabpanel" class="tab-pane active" id="home">
-<div class="row">
+<div class="row" id="products">
 
-<div class="col-md-4 col-sm-4">
+<!-- <div class="col-md-4 col-sm-4">
 <div class="single-product">
 <div class="product-img">
 <a href="product-details.html">
@@ -547,15 +542,15 @@
 </div>
 <h3><a href="product-details.html">Phasellus Vel Hendrerit</a></h3>
 <div class="price">
-<span>$70.00</span>
+<span>$720.00</span>
 <span class="old">$80.11</span>
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
-<div class="col-md-4 col-sm-4">
+<!-- <div class="col-md-4 col-sm-4">
 <div class="single-product">
 <div class="product-img">
 <a href="product-details.html">
@@ -1330,7 +1325,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 </div>
 </div>
@@ -1522,6 +1517,7 @@
 <script src="js/plugins.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/shop.js"></script>
 </body>
 
 <!-- Mirrored from richman.keepgoods.com/shop.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Oct 2020 17:30:50 GMT -->
