--- a/cart.html
+++ b/cart.html
@@ -361,8 +361,8 @@
 <th class="product-remove">Remove</th>
 </tr>
 </thead>
-<tbody>
-<tr>
+<tbody id="cartItems">
+<!-- <tr>
 <td class="product-thumbnail"><a href="#"><img src="img/cart/2.jpg" alt="" /></a></td>
 <td class="product-name"><a href="#">Lorem ipsum dolor</a></td>
 <td class="product-price"><span class="amount">£125.00</span></td>
@@ -377,7 +377,7 @@
 <td class="product-quantity"><input type="number" value="1" /></td>
 <td class="product-subtotal">£90.00</td>
 <td class="product-remove"><a href="#"><i class="fa fa-times"></i></a></td>
-</tr>
+</tr> -->
 </tbody>
 </table>
 </div>
@@ -398,8 +398,8 @@
 <div class="cart_totals">
 <h2>Cart Totals</h2>
 <table>
-<tbody>
-<tr class="cart-subtotal">
+<tbody id="total">
+<!-- <tr class="cart-subtotal">
 <th>Subtotal</th>
 <td><span class="amount">£215.00</span></td>
 </tr>
@@ -407,18 +407,6 @@
 <th>Shipping</th>
 <td>
 <ul id="shipping_method">
-<li>
-<input type="radio" />
-<label>
-Flat Rate: <span class="amount">£7.00</span>
-</label>
-</li>
-<li>
-<input type="radio" />
-<label>
-Free Shipping
-</label>
-</li>
 <li></li>
 </ul>
 <p><a class="shipping-calculator-button" href="#">Calculate Shipping</a></p>
@@ -429,7 +417,7 @@ Free Shipping
 <td>
 <strong><span class="amount">£215.00</span></strong>
 </td>
-</tr>
+</tr> -->
 </tbody>
 </table>
 <div class="wc-proceed-to-checkout">
@@ -579,6 +567,7 @@ Free Shipping
 <script src="js/plugins.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/productcart.js"></script>
 </body>
 
 <!-- Mirrored from richman.keepgoods.com/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Oct 2020 17:30:51 GMT -->
