--- a/product-details.html
+++ b/product-details.html
@@ -347,8 +347,8 @@
 <div class="shop-area">
 <div class="container">
 <div class="row">
-<div class="col-md-9">
-<div class="row">
+<div class="col-md-9" id="details">
+<!-- <div class="row">
 <div class="col-md-5 col-sm-5 col-xs-12">
 <div class="single-pro-tab-content">
 
@@ -432,8 +432,8 @@
 </div>
 </div>
 </div>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
 <div class="col-md-12 col-sm-12">
 <div class="product-tabs">
 <div>
@@ -531,7 +531,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec
 </div>
 </div>
 </div>
-</div>
+</div> -->
 <div class="row">
 <div class="col-md-12">
 <div class="section-title text-center">
@@ -848,8 +848,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec
 
 <aside class="widget widget-categories">
 <h3 class="sidebar-title">Recent Product</h3>
-<div class="recent-product">
-<div class="single-product">
+<div class="recent-product" id="relatedproducts">
+<!-- <div class="single-product">
 <div class="product-img">
 <a href="product-details.html">
 <img src="img/product/15.jpg" alt="" />
@@ -893,7 +893,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec
 <span class="old">$90.11</span>
 </div>
 </div>
-</div>
+</div> -->
 </div>
 </aside>
 
@@ -1109,6 +1109,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec
 <script src="js/plugins.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/productdetailpage.js"></script>
 </body>
 
 <!-- Mirrored from richman.keepgoods.com/product-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Oct 2020 17:30:53 GMT -->
