--- a/product-details.html
+++ b/product-details.html
@@ -1118,6 +1118,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec
 <script src="js/plugins.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/shop.js"></script>
 <script src="js/productdetailpage.js"></script>
 </body>
 
