--- a/checkout.html
+++ b/checkout.html
@@ -32,6 +32,8 @@
 
 <script src="js/settings.js"></script>
 <script src="js/checkout.js"></script>
+<script src="js/localstorage.js"></script>
+
 
 
 </head>
@@ -165,13 +167,13 @@
 </div>
 <div class="col-md-2 col-sm-8 col-xs-6 header-right">
 <div class="my-cart">
-<div class="total-cart">
-<a href="cart.html">
+<div  class="total-cart">
+<a onmouseover="headerCart()" href="cart.html">
 <img src="img/cart/cart.png" alt="" />
-<span>3</span>
+<span id="productCount">0</span>
 </a>
 </div>
-<ul id="headerCart">   
+<ul id="cartBox">   
 
 </ul>
 </div>
@@ -187,7 +189,7 @@
 <div class="search">
 <form>
 <input type="search" placeholder="Search Shop">
-<button type="submit"><i class="fa fa-search"></i></button>
+<button ><i class="fa fa-search"></i></button>
 </form>
 </div>
 </div>
@@ -316,7 +318,7 @@
 <div id="checkout-login" class="coupon-content">
 <div class="coupon-info">
 <p class="coupon-text">Quisque gravida turpis sit amet nulla posuere lacinia. Cras sed est sit amet ipsum luctus.</p>
-<form action="#">
+<form >
 <p class="form-row-first">
 <label>Username or email <span class="required">*</span></label>
 <input type="text" />
@@ -325,8 +327,8 @@
 <label>Password <span class="required">*</span></label>
 <input type="text" />
 </p>
-<p class="form-row">
-<input type="submit" value="Login" />
+<p class="form-row">   
+<button>Login</button>
 <label>
 <input type="checkbox" />
 Remember me
@@ -347,10 +349,10 @@ Remember me
 <h3>Have a coupon? <span id="showcoupon">Click here to enter your code</span></h3>
 <div id="checkout_coupon" class="coupon-checkout-content">
 <div class="coupon-info">
-<form action="#">
+<form >
 <p class="checkout-coupon">
 <input type="text" placeholder="Coupon code" />
-<input type="submit" value="Apply Coupon" />
+<button>Apply Coupon</button>
 </p>
 </form>
 </div>
@@ -366,7 +368,7 @@ Remember me
 <div class="checkout-area">
 <div class="container">
 <div class="row">
-<form action="#">
+<form>
 <div class="col-lg-6 col-md-6">
 <div class="checkbox-form">
 <h3>Billing Details</h3>
@@ -460,7 +462,7 @@ Vestibulum dictum magna	<strong class="product-quantity"> × 1</strong>
 <th>Shipping</th>
 <td>
 <ul>
-<li>Rs <span id="shipping">500</span></li>
+<li>Rs <span id="shipping"></span></li>
 </ul>
 </td>
 </tr>
@@ -477,12 +479,12 @@ Vestibulum dictum magna	<strong class="product-quantity"> × 1</strong>
 <div class="panel panel-default">
 <div class="panel-heading" role="tab" id="headingThree">
 <h4 class="panel-title">
-<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+<a>
 Cash On Delivery
 </a>
 </h4>
 </div>
-<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+<div >
 <div class="panel-body">
 <p>We Deliver Your Product With Love & Care. </p>
 </div>
@@ -490,12 +492,13 @@ Cash On Delivery
 </div>
 </div>
 <div class="order-button-payment">
-<input type="submit" onclick="placeOrder()" value="Place order" />
+    <button type="button" onclick="placeOrder()">Place Order</button>
 </div>
 </div>
 </div>
 </div>
 </form>
+
 </div>
 </div>
 </div>
@@ -509,9 +512,9 @@ Cash On Delivery
 <div class="subscribe-us text-center">
 <h4>NEWSLETTER</h4>
 <span>Phasellus lacinia fermentum bibendum. Interdum et malesuada fames ac ante ipsumien lacus, eu posuere odi </span>
-<form action="#">
+<form >
 <input type="email" placeholder="Enter your email address">
-<button type="submit">SEND ME</button>
+<button >SEND ME</button>
 </form>
 </div>
 </div>
