--- a/shop.html
+++ b/shop.html
@@ -31,6 +31,7 @@
 
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 <script src="js/settings.js"></script>
+<script src="js/localstorage.js"></script>
 
 
 </head>
@@ -163,58 +164,14 @@
 </div>
 </div>
 <div class="col-md-2 col-sm-8 col-xs-6 header-right">
-<div class="my-cart">
+<div id="shez" class="my-cart">
 <div class="total-cart">
-<a href="cart.html">
+<a onmouseover="headerCart()" href="cart.html">
 <img src="img/cart/cart.png" alt="" />
-<span>3</span>
+<span id="productCount">0</span>
 </a>
 </div>
-<ul>
-<li>
-<div class="cart-img">
-<a href="#"><img alt="" src="img/cart/1.jpg"></a>
-</div>
-<div class="cart-info">
-<h4><a href="#">Vestibulum suscipit</a></h4>
-<span>£165.00 <span>x 1</span></span>
-</div>
-<div class="del-icon">
-<i class="fa fa-times-circle"></i>
-</div>
-</li>
-<li>
-<div class="cart-img">
-<a href="#"><img alt="" src="img/cart/1.jpg"></a>
-</div>
-<div class="cart-info">
-<h4><a href="#">Vestibulum suscipit</a></h4>
-<span>£165.00 <span>x 1</span></span>
-</div>
-<div class="del-icon">
-<i class="fa fa-times-circle"></i>
-</div>
-</li>
-<li>
-<div class="cart-img">
-<a href="#"><img alt="" src="img/cart/1.jpg"></a>
-</div>
-<div class="cart-info">
-<h4><a href="#">Vestibulum suscipit</a></h4>
-<span>£165.00 <span>x 1</span></span>
-</div>
-<div class="del-icon">
-<i class="fa fa-times-circle"></i>
-</div>
-</li>
-<li class="cart-border">
-<div class="subtotal-text">Subtotal: </div>
-<div class="subtotal-price">£300.00</div>
-</li>
-<li>
-<a class="cart-button" href="cart.html">view cart</a>
-<a class="checkout" href="checkout.html">checkout</a>
-</li>
+<ul  id="cartBox">
 </ul>
 </div>
 <div class="header-search">
