--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
 <div class="top-nav">
 <div class="currency dropdown">
 <ul>
-<li><a href="#">USD</a>
+<li><a style="color:#444" href="#">USD</a>
 <ul>
-<li><a href="#">USD</a></li>
-<li><a href="#">EUR</a></li>
-<li><a href="#">GBP</a></li>
-<li><a href="#">JPY</a></li>
+<li><a style="color:#444" href="#">USD</a></li>
+<li><a style="color:#444" href="#">EUR</a></li>
+<li><a style="color:#444" href="#">GBP</a></li>
+<li><a style="color:#444" href="#">JPY</a></li>
 </ul>
 </li>
 </ul>
 </div>
 <div class="language dropdown">
 <ul>
-<li><a href="#">ENGLISH</a>
+<li><a style="color:#444" href="#">ENGLISH</a>
 <ul>
-<li><a href="#">ENGLISH</a></li>
-<li><a href="#">FRANCE</a></li>
-<li><a href="#">GERMANY</a></li>
-<li><a href="#">JAPANESE</a></li>
+<li><a style="color:#444" href="#">ENGLISH</a></li>
+<li><a style="color:#444" href="#">FRANCE</a></li>
+<li><a style="color:#444" href="#">GERMANY</a></li>
+<li><a style="color:#444" href="#">JAPANESE</a></li>
 </ul>
 </li>
 </ul>
@@ -95,7 +95,7 @@
 <div class="row">
 <div class="col-md-2 col-sm-4 col-xs-6">
 <div class="logo">
-<a href="index.html"><img id="logo" src="img/logo.png" alt="" /></a>
+<a href="index.html"><img id="logo" style="width: 100px;height: 100px;" src="img/logo.png" alt="" /></a>
 </div>
 </div>
 <div class="col-md-8 hidden-xs hidden-sm">
@@ -168,7 +168,7 @@
 <div class="my-cart">
 <div class="total-cart">
 <a onmouseover="headerCart()" href="cart.html">
-<img src="img/cart/cart.png" alt="" />
+<img src="img/cart/icon-white.png" alt="" />
 <span id="productCount">0</span>
 </a>
 </div>
@@ -181,7 +181,7 @@
 
 <div class="dropdown">
 <a href="javascript:void(0);" class="search-open">
-<img src="img/search.png" alt="" />
+<img style="width: 19px; height: 19px;" src="img/icon-search-white.png" alt="" />
 </a>
 <div class="search-inside animated bounceInUp"> <i class="icon-close search-close fa fa-times"></i>
 <div class="search-overlay"></div>
@@ -402,7 +402,7 @@ et dolore magna</p>
 <div role="tabpanel" class="tab-pane active" id="home">
 <div class="row">
 <div class="product-curosel">
-
+<!-- 
 <div class="col-md-12">
 <div class="single-product">
 <div class="product-img">
@@ -436,7 +436,7 @@ et dolore magna</p>
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
 <div class="col-md-12">
