--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="cdn-cgi/apps/head/VOTpVwma55eOauTrYZhS1mPXv0A.js"></script>
-<!-- <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"> -->
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
 
 
@@ -51,38 +51,38 @@
 </div>
 </div>
 <div class="col-md-6 col-sm-6">
-<div class="top-nav">
-<div class="currency dropdown">
-<ul>
-<li><a href="#">USD</a>
-<ul>
-<li><a href="#">USD</a></li>
-<li><a href="#">EUR</a></li>
-<li><a href="#">GBP</a></li>
-<li><a href="#">JPY</a></li>
-</ul>
-</li>
-</ul>
-</div>
-<div class="language dropdown">
-<ul>
-<li><a href="#">ENGLISH</a>
-<ul>
-<li><a href="#">ENGLISH</a></li>
-<li><a href="#">FRANCE</a></li>
-<li><a href="#">GERMANY</a></li>
-<li><a href="#">JAPANESE</a></li>
-</ul>
-</li>
-</ul>
-</div>
-<div class="account">
-<a class="login" href="login.html">Sign in</a>
-<span>Or</span>
-<a class="register" href="login.html">Register</a>
-</div>
-</div>
-</div>
+    <div class="top-nav">
+    <div class="currency dropdown">
+    <ul>
+    <li><a style="color:#444" href="#">USD</a>
+    <ul>
+    <li><a style="color:#444" href="#">USD</a></li>
+    <li><a style="color:#444" href="#">EUR</a></li>
+    <li><a style="color:#444" href="#">GBP</a></li>
+    <li><a style="color:#444" href="#">JPY</a></li>
+    </ul>
+    </li>
+    </ul>
+    </div>
+    <div class="language dropdown">
+    <ul>
+    <li><a style="color:#444" href="#">ENGLISH</a>
+    <ul>
+    <li><a style="color:#444" href="#">ENGLISH</a></li>
+    <li><a style="color:#444" href="#">FRANCE</a></li>
+    <li><a style="color:#444" href="#">GERMANY</a></li>
+    <li><a style="color:#444" href="#">JAPANESE</a></li>
+    </ul>
+    </li>
+    </ul>
+    </div>
+    <div class="account">
+    <a class="login" href="login.html">Sign in</a>
+    <span>Or</span>
+    <a class="register" href="login.html">Register</a>
+    </div>
+    </div>
+    </div>
 </div>
 </div>
 </div>
@@ -93,7 +93,7 @@
 <div class="row">
 <div class="col-md-2 col-sm-4 col-xs-6">
 <div class="logo">
-<a href="index.html"><img id="logo" src="img/logo.png" alt="" /></a>
+<a href="index.html"><img id="logo" style="width: 100px; height: 100px;" src="img/logo.png" alt="" /></a>
 </div>
 </div>
 <div class="col-md-8 hidden-xs hidden-sm">
@@ -167,7 +167,7 @@
 <div id="shez" class="my-cart">
 <div class="total-cart">
 <a onmouseover="headerCart()" href="cart.html">
-<img src="img/cart/cart.png" alt="" />
+<img src="img/cart/icon-white.png" alt="" />
 <span id="productCount">0</span>
 </a>
 </div>
@@ -178,7 +178,7 @@
 
 <div class="dropdown">
 <a href="javascript:void(0);" class="search-open">
-<img src="img/search.png" alt="" />
+<img src="img/icon-search-white.png" alt="" />
 </a>
 <div class="search-inside animated bounceInUp"> <i class="icon-close search-close fa fa-times" id="clickcloseButton"></i>
 <div class="search-overlay"></div>
@@ -278,7 +278,7 @@
 <div class="row">
 <div class="col-md-12">
 <div class="title-heading text-center">
-<h1>OUR SHOP WITH left SIDEBAR</h1>
+<h1>Welcome to our shop</h1>
 <p>We are a featured brand that calls itself fashion</p>
 </div>
 </div>
@@ -438,11 +438,11 @@
 <div class="col-md-9 col-sm-12 col-xs-12">
 <div class="shop-content">
 
-<ul class="shop-tab" role="tablist">
+<!-- <ul class="shop-tab" role="tablist">
 <li><span class="sorting-name"> View as: </span></li>
 <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><i class="fa fa-th" aria-hidden="true"></i></a></li>
 <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><i class="fa fa-th-list" aria-hidden="true"></i></a></li>
-</ul>
+</ul> -->
 <div class="short-by">
 <span class="sorting-show"> Sort by:</span>
 <select id="sortByPrice" onchange="sort()">
